# pswn_soft

./: pyproject.toml
src/config/: data_profiles.yaml
src/purple_swan/analytics/factor_risk/: calculate_fama_french_betas.py  factor_risk_calculator.py
src/purple_swan/analytics/regime/: generic_factor_anlyzer.py  regime_detection.py
src/purple_swan/analytics/var/: var_engine.py
src/purple_swan/core/: aws_tools.py  aws_utils.py
src/purple_swan/data/: data_factory.py  data_utils.py  environment.py  factory_builder.py  get_stock_data.py  loader_registry.py  models.py
src/purple_swan/data/data_providers/: fama_french_importer.py  time_series_loader.py
src/purple_swan/data/data_providers/sec/: clean_13f_data.py  download_13f.py
src/purple_swan/data/enrichment/: enrichment.py  portfolio_enricher.py  position_enricher.py
src/purple_swan/data/loaders/: __init__.py  data_frame_loader.py  data_loader.py  file_source_data_loader.py  position_enricher.py  s3_base.py  s3_factor_loadings_data_loader.py  s3_instruments_data_loader.py  s3_portfolio_data_loader.py  s3_position_data_loader.py  ts_matrix_data_loader.py
src/purple_swan/data/models/: data_loader.py  models.py  s3_instruments_data_loader.py  s3_portfolio_data_loader.py
src/purple_swan/llm/: claude_regime_interpeter.py  claude_risk_explain.py  test_anthropic.py  test_claude_scenarios.py  trade_recommendations_agent.py  var_explain.py
src/purple_swan/main/: flexible_regime_analysis.py  import_time_series.pu.py  import_time_series.py  merge_time_series.py  run_data_loader.py  test_composites.py
