[project]
name = "purple_swan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "aleksey matiychenko", email = "aleksey@purpleswansoftware.com"},
]
dependencies = ["pandas>=2.3.3", 
		"fsspec>=2025.10.0", 
		"s3fs>=2025.10.0", 
		"boto3>=1.40.61", 
		"finnhub-python>=2.4.25", 
		"pyarrow>=22.0.0", 
		"yfinance>=0.2.66", 
		"pyyaml>=6.0.3", 
		"pandas-datareader>=0.10.0", 
		"setuptools>=70", 
		"standard-distutils>=3.11.9", 
		"statsmodels>=0.14.5", 
		"sec-edgar-downloader>=5.0.3", 
		"sec-api>=1.0.32", 
		"torch>=2.7.1", 
		"torch-vision>=0.1.6.dev0", 
		"Pillow>=12.0.0", 
		"numba>=0.62.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
download-pswn-bucket = "python tests/download_pswn_bucket.py"
